...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_name"/>
            <EditText
                android:id="@+id/beer_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brew_date"/>
            <TextView
                android:id="@+id/brew_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="onClickDateInput"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_type"/>
            <Spinner
                android:id="@+id/beer_style_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bittering_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/flavor_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/aroma_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/knockout_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dry_hops_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pre-Boil Gravity"/>
            <EditText
                android:id="@+id/preboil_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Original Gravity"/>
            <view
                class="com.example.scott.beerdiary2.FormActivity$CustomEditText"
                android:id="@+id/original_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Final Gravity"/>
            <EditText
                android:id="@+id/final_gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>

