<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:id="@+id/hop_row_layout">
    <EditText
        android:id="@+id/hop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"/>
    <EditText
        android:id="@+id/hop_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OZ"
        android:layout_weight="1"/>
</LinearLayout>
